<resources>
    <string name="app_name">Scanner Reader App</string>
    <string name="sync">Synchronization</string>
    <string name="metalac">Metalac</string>
    <string name="data">Data</string>
    <string name="menu">Menu</string>
    <string name="inventory_lists">Inventory Lists</string>
    <string name="getMaster">Download Master Data</string>
    <string name="sendInventoryLists">Send Lists</string>
    <string name="deleteInventories">Delete Store Inventories</string>
    <string name="inventory">Inventory</string>
    <string name="extra_info">Extra</string>
    <string name="search">Search</string>
    <string name="device_name">Device Name</string>
    <string name="store_code">Store Code</string>
    <string name="confirm_device_name">Confirm Device Name</string>
    <string name="confirm_store_code">Confirm Store Code</string>
    <string name="confirm">Confirm</string>
    <string name="change">Edit</string>
    <string name="change_1">Change</string>
    <string name="cancel">Cancel</string>
    <string name="device_name_confirmation_dialog_title">Device Name Confirmation</string>
    <string name="device_name_confirmation_dialog_subtitle">Are you sure you want to set the device name to \"%s\"?</string>
    <string name="store_code_confirmation_dialog_title">Store Code Confirmation</string>
    <string name="store_code_confirmation_dialog_subtitle">Are you sure you want to set the store code to \"%s\"?</string>
    <string name="change_store_code_confirmation_dialog_title">Change Store Code</string>
    <string name="change_store_code_confirmation_dialog_subtitle">Are you sure you want to change the store code?</string>
    <string name="change_store_code">Change Store Code</string>
    <string name="ok">OK</string>
    <string name="invalid_master_data_title">Invalid Master Data</string>
    <string name="invalid_master_data_subtitle">The store code on the device does not match the store code in the master data! \n\n Code on device: \"%s\" \n Code from master: \"%s\"</string>
    <string name="invalid_master_format_title">Invalid Master Data Format!</string>
    <string name="invalid_master_format_subtitle">Failed to parse the data. Please check the format of the JSON file and try again.</string>
    <string name="last_sync_date">Last Synchronization Date</string>
    <string name="sync_success_title">Synchronization Successful!</string>
    <string name="sync_success_subtitle">You have successfully synchronized the master data. You may now begin inventorying.</string>
    <string name="loading">Loading…</string>
    <string name="exporting">Exporting…</string>
    <string name="deleting">Deleting…</string>
    <string name="loading_master_data_subtitle">Please wait while the master data is being loaded</string>
    <string name="exporting_inventory_data_subtitle">Please wait while the inventory data is being exported</string>
    <string name="deleting_data_subtitle">Please wait while the data is being deleted</string>
    <string name="error_title">Error!</string>
    <string name="configuration">Configuration</string>
    <string name="product_name">Name</string>
    <string name="unit_of_measure">Unit of measure</string>
    <string name="price">Price</string>
    <string name="initial_quantity">ERP Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="damage">Damage</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <string name="id_ent">Ident</string>
    <string name="id_alt" translatable="false">Alt id</string>
    <string name="id_alt_1" translatable="false">Alt id (1)</string>
    <string name="id_alt_2" translatable="false">Alt id (2)</string>
    <string name="barcode">Barcode</string>
    <string name="sales_program">Sales Program</string>
    <string name="procurement_program">Procurement Program</string>
    <string name="active">Active</string>
    <string name="bookkeeping_id">Bookkeeping id</string>
    <string name="search_for_master_data">Search Master Data</string>
    <string name="search_for_listed_data">Search Listed Data</string>
    <string name="no_master_item">There is no item with this barcode in the master data list.</string>
    <string name="invalid_filename_format">Invalid file name format. Expected format: MAT followed by 9 digits and ending with .json</string>
    <string name="add_product_error_title">Add Failed</string>
    <string name="add_product_error_subtitle">Cannot add due to incomplete data. All fields must be filled.</string>
    <string name="filter_by_name">Search by name</string>
    <string name="no_product_for_filter">No products found for the selected filter.</string>
    <string name="synchronization_required">Synchronization required</string>
    <string name="warning_quantity_title">Quantity exceeded</string>
    <string name="warning_quantity_subtitle">The entered quantity exceeds the maximum allowed limit. \n Are you sure you want to add the product?</string>
    <string name="negative_quantity_title">Invalid Quantity</string>
    <string name="negative_quantity_subtitle">Quantity must be greater then 0!</string>
    <string name="try_again_add_subtitle">An error occurred while adding the product.\nPlease try again.</string>
    <string name="try_again_search_subtitle">An error occurred while searching the product.\nPlease try again.</string>
    <string name="additional_data">Additional data</string>
    <string name="void_item">Void item</string>
    <string name="options_dialog_image_description">Select Action</string>
    <string name="options_dialog_title">Chose the action you want to perform on the following product:</string>
    <string name="void_item_dialog_title">Void Product</string>
    <string name="void_item_dialog_subtitle">Confirm voiding the following item:</string>
    <string name="dialog_item_data">%s \nIdent: %s \nBarcode: %s</string>
    <string name="update_item">Update</string>
    <string name="data_will_be_lost_title">The entered data will be lost</string>
    <string name="data_will_be_lost_subtitle">Are you sure you want to continue?</string>
    <string name="update_failed_title">Update failed</string>
    <string name="update_failed_subtitle">No matching item found to update.</string>
    <string name="database_error_title">Database error</string>
    <string name="invalid_filter">Incorrect filter conditions.</string>
    <string name="preview_item_error">Failed to get product from database.</string>
    <string name="no_products_error">No products were found!</string>
    <string name="list_name">List name</string>
    <string name="new_inventory_list">New inventory list</string>
    <string name="no_inventory_lists">No inventory lists created.\nCreate a new list.</string>
    <string name="invalid_damage_data_title">Missing Damage Info</string>
    <string name="invalid_damage_data_subtitle">The file doesn\'t contain any valid damage codes</string>
    <string name="clear">Clear</string>
    <string name="invalid_weight_value">Weight value in barcode is not a valid number.</string>
    <string name="invalid_alt_code_value">Alternative item code in the barcode is not a valid number.</string>
    <string name="no_list_error">No list were found!</string>
    <string name="delete_data_fail_title">Delete fail</string>
    <string name="export_data_fail_title">Export fail</string>
    <string name="export_data_dialog_title">Export data</string>
    <string name="export_file_create_failed">Failed to create file in export folder.</string>
    <string name="export_file_open_failed">Failed to open file for writing.</string>
    <string name="export_data_dialog_subtitle">Are you sure you want to export data?</string>
    <string name="export_data">Export</string>
    <string name="delete_data_dialog_title">Clear data</string>
    <string name="delete_data_dialog_subtitle">Are you sure you want to delete inventory data?</string>
    <string name="export_data_success_title">Export success</string>
    <string name="export_data_success_subtitle">You have successfully exported the data.</string>
    <string name="delete_data_success_title">Delete success</string>
    <string name="delete_data_success_subtitle">You have successfully delete the data.</string>
    <string name="export_file_error_message">Failed to create file in MediaStore</string>
    <string name="last_export_date">Last Export Date</string>
    <string name="no_products">No listed products</string>
    <string name="change_store_code_blocked_dialog_title">Cannot Change Store Code</string>
    <string name="change_store_code_blocked_dialog_subtitle">You must clear all inventory data before changing the store code.</string>
    <string name="change_store_code_confirm_button">Yes, Change</string>
    <string name="already_voided_error_title">Item is already voided!</string>
    <string name="already_voided_error_subtitle">Go back and try again</string>
    <string name="alternative_search">Alternative search</string>
    <string name="alternative_search_fail">There is no product with the requested data.</string>
    <string name="item_not_found_error_title">Item not found</string>
    <string name="item_not_found_error_subtitle">The requested item does not exist.</string>
    <string name="void_failed_error">Void item failed</string>
</resources>