<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="@dimen/padding_extra_large">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_normal"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/new_inventory_list"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/dialog_title_text_size" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilListName"
        style="@style/TextInputAutoClearStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_name"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:paddingBottom="@dimen/padding_small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans_bold"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_size_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAdd"
        style="@style/ScannerReaderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:enabled="false"
        android:text="@string/add" />
</LinearLayout>