<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btMasterData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilIdEnt"
                style="@style/TextInputAutoClearStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/id_ent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIdEnt"
                    style="@style/TextInputEditStyle"
                    android:inputType="number"
                    android:maxLength="7" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProductName"
                style="@style/TextInputAutoClearStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/product_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilIdEnt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductName"
                    style="@style/TextInputEditStyle"
                    android:inputType="text"
                    android:maxLength="70" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tillMeasureUnit"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/unit_of_measure"
                app:endIconMode="dropdown_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilProductName">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etMeasureUnit"
                    style="@style/TextInputEditStyle"
                    android:focusable="false"
                    android:fontFamily="@font/work_sans_bold"
                    android:inputType="none"
                    android:padding="@dimen/padding_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProductPrice"
                style="@style/TextInputAutoClearStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tillMeasureUnit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductPrice"
                    style="@style/TextInputEditStyle"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAltId1"
                style="@style/TextInputAutoClearStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:hint="@string/id_alt_1"
                app:layout_constraintEnd_toStartOf="@id/tilAltId2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilProductPrice">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAltId1"
                    style="@style/TextInputEditStyle"
                    android:inputType="number"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAltId2"
                style="@style/TextInputAutoClearStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/id_alt_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tilAltId1"
                app:layout_constraintTop_toBottomOf="@id/tilProductPrice">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAltId2"
                    style="@style/TextInputEditStyle"
                    android:inputType="number"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBarcode"
                style="@style/TextInputAutoClearStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/barcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilAltId2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBarcode"
                    style="@style/TextInputEditStyle"
                    android:inputType="number"
                    android:maxLength="13" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSalesProgram"
                style="@style/TextInputAutoClearStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/sales_program"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilBarcode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSalesProgram"
                    style="@style/TextInputEditStyle"
                    android:inputType="text"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProcurementProgram"
                style="@style/TextInputAutoClearStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/procurement_program"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilSalesProgram">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProcurementProgram"
                    style="@style/TextInputEditStyle"
                    android:inputType="text"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/llAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/outline_box_background"
                android:orientation="horizontal"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                app:layout_constraintEnd_toStartOf="@id/llBookkeeping"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilProcurementProgram">

                <CheckBox
                    android:id="@+id/cbActive"
                    style="@style/CheckBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/active" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBookkeeping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/outline_box_background"
                android:orientation="horizontal"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/llAction"
                app:layout_constraintTop_toBottomOf="@id/tilProcurementProgram">

                <CheckBox
                    android:id="@+id/cbBookkeeping"
                    style="@style/CheckBoxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/bookkeeping_id" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMasterData"
        style="@style/ScannerReaderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/search_for_master_data"
        app:layout_constraintBottom_toTopOf="@id/btDataList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDataList"
        style="@style/ScannerReaderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/search_for_listed_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>